--- a/plugins/AppendGrid/config.yaml
+++ b/plugins/AppendGrid/config.yaml
@@ -1,77 +1,119 @@
 id: AppendGrid
 name: AppendGrid
 version: 0.10
+schema_version: 0.04
 l10n_class: MT::AppendGrid::L10N
 description: <__trans phrase="Adds grid customfield type with appendGrid.">
 
+object_types:
+    append_grid_schema: MT::AppendGrid::Schema
+
 customfield_types:
-  append_grid_with_json:
-    label: Grid Table with AppendGrid configured by JSON
-    field_html: |
-      <mt:Include name="tmpl/append_grid_with_json/field.tmpl" component="AppendGrid" />
-    field_html_params: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_with_json_params
-    options_field: |
-      <mt:Include name="tmpl/append_grid_with_json/options.tmpl" component="AppendGrid" />
-    default_value: |
-      {
-          columns: [
-              {
-                  name: 'Album',
-                  display: 'アルバム',
-                  type: 'text',
-                  ctrlAttr: { maxlength: 100 },
-                  ctrlCss: { width: '160px' }
-              },
-              {
-                  name: 'Artist',
-                  display: 'アーティスト',
-                  type: 'text',
-                  ctrlAttr: { maxlength: 100 },
-                  ctrlCss: { width: '100px'}
-              },
-              {
-                  name: 'Year',
-                  display: '発売年',
-                  type: 'text',
-                  ctrlAttr: { maxlength: 4 },
-                  ctrlCss: { width: '40px'}
-              },
-              {
-                  name: 'Price',
-                  display: '価格',
-                  type: 'text',
-                  ctrlAttr: { maxlength: 10 },
-                  ctrlCss: { width: '50px', 'text-align': 'right' },
-                  value: 0
-              }
-          ],
-          initData: [
-              { 'Album': 'Dearest', 'Artist': 'Theresa Fu', 'Year': '2009', 'Price': 168.9 },
-              { 'Album': 'To be Free', 'Artist': 'Arashi', 'Year': '2010', 'Price': 152.6 },
-              { 'Album': 'Count On Me', 'Artist': 'Show Luo', 'Year': '2012', 'Price': 306.8 },
-              { 'Album': 'Wonder Party', 'Artist': 'Wonder Girls', 'Year': '2012', 'Price': 108.6 },
-              { 'Album': 'Reflection', 'Artist': 'Kelly Chen', 'Year': '2013', 'Price': 138.2 }
-          ]
-      }
-    validate: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_with_json_validate
-    column_def: vclob
-    no_default: 1
-    order: 2000
+    append_grid_with_json:
+        label: Grid Table with AppendGrid configured by JSON
+        field_html: |
+            <mt:Include name="tmpl/append_grid_with_json/field.tmpl" component="AppendGrid" />
+        field_html_params: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_with_json_params
+        options_field: |
+            <mt:Include name="tmpl/append_grid_with_json/options.tmpl" component="AppendGrid" />
+        default_value: |
+            {
+                    columns: [
+                            {
+                                    name: 'Album',
+                                    display: 'アルバム',
+                                    type: 'text',
+                                    ctrlAttr: { maxlength: 100 },
+                                    ctrlCss: { width: '160px' }
+                            },
+                            {
+                                    name: 'Artist',
+                                    display: 'アーティスト',
+                                    type: 'text',
+                                    ctrlAttr: { maxlength: 100 },
+                                    ctrlCss: { width: '100px'}
+                            },
+                            {
+                                    name: 'Year',
+                                    display: '発売年',
+                                    type: 'text',
+                                    ctrlAttr: { maxlength: 4 },
+                                    ctrlCss: { width: '40px'}
+                            },
+                            {
+                                    name: 'Price',
+                                    display: '価格',
+                                    type: 'text',
+                                    ctrlAttr: { maxlength: 10 },
+                                    ctrlCss: { width: '50px', 'text-align': 'right' },
+                                    value: 0
+                            }
+                    ],
+                    initData: [
+                            { 'Album': 'Dearest', 'Artist': 'Theresa Fu', 'Year': '2009', 'Price': 168.9 },
+                            { 'Album': 'To be Free', 'Artist': 'Arashi', 'Year': '2010', 'Price': 152.6 },
+                            { 'Album': 'Count On Me', 'Artist': 'Show Luo', 'Year': '2012', 'Price': 306.8 },
+                            { 'Album': 'Wonder Party', 'Artist': 'Wonder Girls', 'Year': '2012', 'Price': 108.6 },
+                            { 'Album': 'Reflection', 'Artist': 'Kelly Chen', 'Year': '2013', 'Price': 138.2 }
+                    ]
+            }
+        validate: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_with_json_validate
+        column_def: vclob
+        no_default: 1
+        order: 2000
+
+listing_screens:
+    append_grid_schema:
+        object_label: AppendGrid Schema
+        primary: name
+        default_sort_key: name
+        permission: administer_blog,edit_custom_fields
+        template: cms/list_append_grid_schema.tmpl
+
+list_properties:
+    append_grid_schema: $AppendGrid::MT::AppendGrid::Schema::list_props
+
+content_actions:
+    append_grid_schema:
+        create_new:
+            mode: view
+            args:
+                _type: append_grid_schema
+            class: icon-create
+            label: Create New
+            order: 100
 
 applications:
-  cms:
-    callbacks:
-      template_param.asset_insert: $AppendGrid::MT::AppendGrid::CMS::asset_insert_param
+    cms:
+        callbacks:
+            template_param.asset_insert: $AppendGrid::MT::AppendGrid::CMS::Asset::asset_insert_param
+            cms_edit.append_grid_schema: $AppendGrid::MT::AppendGrid::CMS::Schema::edit
+            cms_save_filter.append_grid_schema: $AppendGrid::MT::AppendGrid::CMS::Schema::save_filter
+            cms_pre_save.append_grid_schema: $AppendGrid::MT::AppendGrid::CMS::Schema::pre_save
+        menus:
+                custom_fields:append_grid_schema:
+                    label: AppendGrid Schema
+                    order: 1000
+                    mode: list
+                    args:
+                        _type: append_grid_schema
+                    permit_action:
+                        permit_action: edit_custom_fields
+                        at_least_one: 1
+                    view:
+                        - system
+                        - website
+                        - blog
 
 tags:
-  block:
-    AppendGrid: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGrid
-    AppendGridColumns: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridColumns
-    AppendGridRows: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridRows
-    AppendGridRow: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridRow
-    AppendGridCellAsset: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridCellAsset
-    AppendGridHeader?: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridHeader
-    AppendGridFooter?: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridFooter
-  function:
-    AppendGridColumn: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridColumn
-    AppendGridCell: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridCell
+    block:
+        AppendGrid: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGrid
+        AppendGridColumns: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridColumns
+        AppendGridRows: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridRows
+        AppendGridRow: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridRow
+        AppendGridCellAsset: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridCellAsset
+        AppendGridHeader?: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridHeader
+        AppendGridFooter?: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridFooter
+    function:
+        AppendGridColumn: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridColumn
+        AppendGridCell: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridCell
