--- a/plugins/AppendGrid/config.yaml
+++ b/plugins/AppendGrid/config.yaml
@@ -8,60 +8,6 @@ description: <__trans phrase="Adds grid customfield type with appendGrid.">
 object_types:
     append_grid_schema: MT::AppendGrid::Schema
 
-customfield_types:
-    append_grid_with_json:
-        label: Grid Table with AppendGrid configured by JSON
-        field_html: |
-            <mt:Include name="tmpl/append_grid_with_json/field.tmpl" component="AppendGrid" />
-        field_html_params: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_with_json_params
-        options_field: |
-            <mt:Include name="tmpl/append_grid_with_json/options.tmpl" component="AppendGrid" />
-        default_value: |
-            {
-                    columns: [
-                            {
-                                    name: 'Album',
-                                    display: 'アルバム',
-                                    type: 'text',
-                                    ctrlAttr: { maxlength: 100 },
-                                    ctrlCss: { width: '160px' }
-                            },
-                            {
-                                    name: 'Artist',
-                                    display: 'アーティスト',
-                                    type: 'text',
-                                    ctrlAttr: { maxlength: 100 },
-                                    ctrlCss: { width: '100px'}
-                            },
-                            {
-                                    name: 'Year',
-                                    display: '発売年',
-                                    type: 'text',
-                                    ctrlAttr: { maxlength: 4 },
-                                    ctrlCss: { width: '40px'}
-                            },
-                            {
-                                    name: 'Price',
-                                    display: '価格',
-                                    type: 'text',
-                                    ctrlAttr: { maxlength: 10 },
-                                    ctrlCss: { width: '50px', 'text-align': 'right' },
-                                    value: 0
-                            }
-                    ],
-                    initData: [
-                            { 'Album': 'Dearest', 'Artist': 'Theresa Fu', 'Year': '2009', 'Price': 168.9 },
-                            { 'Album': 'To be Free', 'Artist': 'Arashi', 'Year': '2010', 'Price': 152.6 },
-                            { 'Album': 'Count On Me', 'Artist': 'Show Luo', 'Year': '2012', 'Price': 306.8 },
-                            { 'Album': 'Wonder Party', 'Artist': 'Wonder Girls', 'Year': '2012', 'Price': 108.6 },
-                            { 'Album': 'Reflection', 'Artist': 'Kelly Chen', 'Year': '2013', 'Price': 138.2 }
-                    ]
-            }
-        validate: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_with_json_validate
-        column_def: vclob
-        no_default: 1
-        order: 2000
-
 listing_screens:
     append_grid_schema:
         object_label: AppendGrid Schema
@@ -117,3 +63,28 @@ tags:
     function:
         AppendGridColumn: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridColumn
         AppendGridCell: $AppendGrid::MT::AppendGrid::Tags::hdlr_AppendGridCell
+
+customfield_types:
+    append_grid_with_json:
+        label: AppendGrid configured by JSON
+        column_def: vclob
+        no_default: 1
+        order: 2100
+        validate: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_validate
+        field_html: |
+            <mt:Include name="tmpl/customfield/field.tmpl" component="AppendGrid" />
+        field_html_params: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_with_json_params
+        options_field: |
+            <mt:Include name="tmpl/customfield/json_options.tmpl" component="AppendGrid" />
+
+    append_grid_with_yaml:
+        label: AppendGrid configured by YAML
+        column_def: vclob
+        no_default: 1
+        order: 2200
+        validate: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_validate
+        field_html: |
+            <mt:Include name="tmpl/customfield/field.tmpl" component="AppendGrid" />
+        field_html_params: $AppendGrid::MT::AppendGrid::CustomFields::append_grid_with_yaml_params
+        options_field: |
+            <mt:Include name="tmpl/customfield/yaml_options.tmpl" component="AppendGrid" />
